--- a/index.html
+++ b/index.html
@@ -1,105 +1,249 @@
+
+gradjevinska-firma/
+   index.php
+   config.php
+   /projekti/   (prazan folder za slike)
+   /admin/
+      login.php
+      dashboard.php
+      dodaj_projekt.php
+      uredi_projekt.php
+      obrisi_projekt.php
+      logout.php
+   baza.sql
+CREATE DATABASE gradjevinska_firma;
+USE gradjevinska_firma;
+
+CREATE TABLE projekti (
+  id INT AUTO_INCREMENT PRIMARY KEY,
+  naziv VARCHAR(255) NOT NULL,
+  opis TEXT NOT NULL,
+  slika VARCHAR(255) NOT NULL
+);
+
+CREATE TABLE admini (
+  id INT AUTO_INCREMENT PRIMARY KEY,
+  username VARCHAR(50) NOT NULL,
+  password VARCHAR(255) NOT NULL
+);
+
+-- admin / lozinka123
+INSERT INTO admini (username, password) VALUES ('admin', MD5('lozinka123'));
+<?php
+$servername = "localhost";
+$username = "root";   // promijeni ako koristiš drugi user
+$password = "";       // lozinka za MySQL usera
+$dbname = "gradjevinska_firma";
+
+$conn = new mysqli($servername, $username, $password, $dbname);
+if ($conn->connect_error) {
+  die("Greška spajanja: " . $conn->connect_error);
+}
+?>
+<?php include 'config.php'; ?>
 <!DOCTYPE html>
 <html lang="hr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Asseria Gradnja - Uređenje Enterijera i Eksterijera</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <title>Projekti - Građevinska firma</title>
   <style>
-    * {margin: 0; padding: 0; box-sizing: border-box;}
-    body {font-family: Arial, sans-serif; line-height: 1.6; color: #333; background: #f4f4f4;}
-    header {height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; color: white; position: relative; background: url('_ (1).jpeg') no-repeat center center/cover; animation: fadeIn 2s ease-in-out;}
-    header::after {content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5);}
-    header h1, header p, header a {position: relative; z-index: 1;}
-    header h1 {font-size: 3rem; margin-bottom: 1rem; text-shadow: 2px 2px 5px #000; animation: slideDown 2s ease;}
-    header p {font-size: 1.5rem; margin-bottom: 2rem; text-shadow: 1px 1px 3px #000; animation: fadeIn 3s ease;}
-    header a {background: #c8102e; color: #fff; padding: 1rem 2rem; text-decoration: none; border-radius: 5px; font-weight: bold; transition: transform 0.3s;}
-    header a:hover {transform: scale(1.1);}
-    nav {background: #c8102e; padding: 1rem; position: sticky; top: 0; display: flex; justify-content: space-between; align-items: center; z-index: 10;}
-    nav img {height: 50px;}
-    nav ul {list-style: none; display: flex; align-items: center; flex-wrap: wrap;}
-    nav li {margin: 0 1rem;}
-    nav a {color: #fff; text-decoration: none; font-weight: bold; position: relative;}
-    nav a::after {content: ""; position: absolute; width: 0%; height: 2px; left: 0; bottom: -5px; background: white; transition: 0.3s;}
-    nav a:hover::after {width: 100%;}
-    section {padding: 4rem 2rem; max-width: 1100px; margin: auto; background: #fff; border-radius: 10px; margin-top: 2rem; opacity: 0; transform: translateY(40px); transition: all 1s ease;}
-    section.visible {opacity: 1; transform: translateY(0);}
-    h2 {margin-bottom: 1.5rem; text-align: center; color: #c8102e;}
-    .services {display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem;}
-    .service {background: white; padding: 2rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); text-align: center; border-top: 4px solid #c8102e; transition: transform 0.3s;}
-    .service:hover {transform: translateY(-10px);}
-    .service i {font-size: 2rem; color: #c8102e; margin-bottom: 1rem;}
-    .portfolio-gallery, .workmap-gallery, .video-gallery, .shop-items, .cart-items {display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1rem;}
-    .portfolio-gallery img, .workmap-gallery img, .shop-item img {width: 100%; border-radius: 10px; transition: transform 0.3s;}
-    .portfolio-gallery img:hover, .workmap-gallery img:hover, .shop-item img:hover {transform: scale(1.05);}
-    .video-gallery iframe {width: 100%; height: 315px; border-radius: 10px;}
-    .social-links {display: flex; justify-content: center; gap: 2rem; margin-top: 2rem; flex-wrap: wrap;}
-    .social-links a {color: #c8102e; font-size: 1.2rem; font-weight: bold; text-decoration: none; background: #fff; padding: 0.5rem 1rem; border-radius: 5px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); transition: 0.3s; display: flex; align-items: center; gap: 0.5rem;}
-    .social-links a:hover {background: #c8102e; color: #fff;}
-    form {display: flex; flex-direction: column; gap: 1rem;}
-    input, textarea {padding: 0.8rem; border: 1px solid #ccc; border-radius: 5px;}
-    button {background: #c8102e; color: #fff; padding: 1rem; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; transition: background 0.3s;}
-    button:hover {background: #a50e24;}
-    footer {background: #333; color: #fff; text-align: center; padding: 2rem; margin-top: 2rem;}
-    iframe.map {width: 100%; border: none; border-radius: 10px; height: 400px;}
-    .shop-item {background: #fff; padding: 1rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); text-align: center;}
-    .shop-item h3 {margin: 1rem 0;}
-    .cart {background: #fff; padding: 2rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);}
-    .payment {margin-top: 2rem;}
-
-    .contact-links {margin-top: 1rem; display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;}
-    .contact-links a {background: #c8102e; color: #fff; padding: 0.5rem 1rem; border-radius: 5px; text-decoration: none; display: flex; align-items: center; gap: 0.5rem; transition: 0.3s;}
-    .contact-links a:hover {background: #a50e24;}
-
-    @keyframes fadeIn {from {opacity: 0;} to {opacity: 1;}}
-    @keyframes slideDown {from {transform: translateY(-50px); opacity: 0;} to {transform: translateY(0); opacity: 1;}}
+    body { font-family: Arial, sans-serif; }
+    h1 { text-align:center; margin:20px; }
+    .projekti { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; max-width:1100px; margin:auto; }
+    .projekt { background:#f4f4f4; border-radius:10px; overflow:hidden; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
+    .projekt img { width:100%; height:200px; object-fit:cover; }
+    .info { padding:15px; }
+    .info h3 { margin:0; color:#0066cc; }
   </style>
 </head>
 <body>
-  <nav>
-    <img id="logoImage" src="1000001797.jpg" alt="Asseria Gradnja Logo">
-    <ul>
-      <li><a href="#about">O nama</a></li>
-      <li><a href="#services">Usluge</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#videos">Video</a></li>
-      <li><a href="#social">Društvene mreže</a></li>
-      <li><a href="#background">Pozadina</a></li>
-      <li><a href="#shop">Web Shop</a></li>
-      <li><a href="#cart">Košarica</a></li>
-      <li><a href="#editor">Uredi stranicu</a></li>
-      <li><a href="#contact">Kontakt</a></li>
-      <li><a href="#map">Lokacija</a></li>
-      <li><a href="#workmap">Mapa radova</a></li>
-    </ul>
-  </nav>
-
-  <header>
-    <h1 id="companyName" contenteditable="true">Asseria Gradnja</h1>
-    <p contenteditable="true">Profesionalno uređenje enterijera i eksterijera</p>
-    <a href="#contact">Kontaktirajte nas</a>
-  </header>
-
-  <!-- Sekcije kao ranije (kontakt, shop, cart, map, itd.) -->
-
-  <footer>
-    <p contenteditable="true">&copy; 2025 Asseria Gradnja. Sva prava zadržana.</p>
-    <div class="contact-links">
-      <a id="callLinkFooter" href="tel:"><i class="fa-solid fa-phone"></i> Nazovi</a>
-      <a id="emailLinkFooter" href="mailto:"><i class="fa-solid fa-envelope"></i> Pošalji email</a>
-    </div>
-  </footer>
-
-  <script>
-    // Script s funkcijama za cart, kontakt, spremanje u localStorage i scroll animacije
-    document.addEventListener('scroll', () => {
-      document.querySelectorAll('section').forEach(section => {
-        const rect = section.getBoundingClientRect();
-        if (rect.top < window.innerHeight - 100) {
-          section.classList.add('visible');
-        }
-      });
-    });
-  </script>
+  <h1>Naši projekti</h1>
+  <div class="projekti">
+    <?php
+      $sql = "SELECT * FROM projekti ORDER BY id DESC";
+      $result = $conn->query($sql);
+      while($row = $result->fetch_assoc()) {
+        echo "<div class='projekt'>
+                <img src='projekti/{$row['slika']}' alt='{$row['naziv']}'>
+                <div class='info'>
+                  <h3>{$row['naziv']}</h3>
+                  <p>{$row['opis']}</p>
+                </div>
+              </div>";
+      }
+    ?>
+  </div>
 </body>
 </html>
+<?php
+session_start();
+include '../config.php';
+
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+  $username = $_POST['username'];
+  $password = md5($_POST['password']); // MD5 za test (kasnije može password_hash)
+
+  $sql = "SELECT * FROM admini WHERE username='$username' AND password='$password'";
+  $result = $conn->query($sql);
+
+  if ($result->num_rows > 0) {
+    $_SESSION['admin'] = $username;
+    header("Location: dashboard.php");
+    exit;
+  } else {
+    $error = "Pogrešno korisničko ime ili lozinka!";
+  }
+}
+?>
+<h2>Prijava</h2>
+<form method="post">
+  <input type="text" name="username" placeholder="Korisničko ime" required><br>
+  <input type="password" name="password" placeholder="Lozinka" required><br>
+  <button type="submit">Prijava</button>
+</form>
+<?php if(isset($error)) echo "<p style='color:red;'>$error</p>"; ?>
+<?php
+session_start();
+if (!isset($_SESSION['admin'])) {
+  header("Location: login.php");
+  exit;
+}
+include '../config.php';
+?>
+<h1>Admin panel</h1>
+<p>Dobrodošao, <?php echo $_SESSION['admin']; ?>!</p>
+<a href="dodaj_projekt.php">➕ Dodaj novi projekt</a> | 
+<a href="logout.php">🚪 Odjava</a>
+<hr>
+
+<h2>Lista projekata</h2>
+<table border="1" cellpadding="10" cellspacing="0">
+  <tr>
+    <th>ID</th>
+    <th>Naziv</th>
+    <th>Slika</th>
+    <th>Akcije</th>
+  </tr>
+  <?php
+    $sql = "SELECT * FROM projekti ORDER BY id DESC";
+    $result = $conn->query($sql);
+    while($row = $result->fetch_assoc()) {
+      echo "<tr>
+              <td>{$row['id']}</td>
+              <td>{$row['naziv']}</td>
+              <td><img src='../projekti/{$row['slika']}' width='100'></td>
+              <td>
+                <a href='uredi_projekt.php?id={$row['id']}'>✏️ Uredi</a> | 
+                <a href='obrisi_projekt.php?id={$row['id']}' onclick=\"return confirm('Jesi li siguran da želiš obrisati?');\">🗑️ Obriši</a>
+              </td>
+            </tr>";
+    }
+  ?>
+</table>
+<?php
+session_start();
+if (!isset($_SESSION['admin'])) {
+  header("Location: login.php");
+  exit;
+}
+include '../config.php';
+
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+  $naziv = $_POST['naziv'];
+  $opis = $_POST['opis'];
+  $slika = $_FILES['slika']['name'];
+
+  move_uploaded_file($_FILES['slika']['tmp_name'], "../projekti/".$slika);
+
+  $sql = "INSERT INTO projekti (naziv, opis, slika) VALUES ('$naziv','$opis','$slika')";
+  if ($conn->query($sql)) {
+    echo "✅ Projekt dodan!";
+  } else {
+    echo "❌ Greška: " . $conn->error;
+  }
+}
+?>
+<h2>Dodaj novi projekt</h2>
+<form method="post" enctype="multipart/form-data">
+  <input type="text" name="naziv" placeholder="Naziv projekta" required><br>
+  <textarea name="opis" placeholder="Opis projekta" required></textarea><br>
+  <input type="file" name="slika" required><br>
+  <button type="submit">Dodaj</button>
+</form>
+<?php
+session_start();
+if (!isset($_SESSION['admin'])) {
+  header("Location: login.php");
+  exit;
+}
+include '../config.php';
+
+$id = $_GET['id'];
+
+// Dohvati podatke projekta
+$sql = "SELECT * FROM projekti WHERE id=$id";
+$result = $conn->query($sql);
+$projekt = $result->fetch_assoc();
+
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+  $naziv = $_POST['naziv'];
+  $opis = $_POST['opis'];
+
+  if (!empty($_FILES['slika']['name'])) {
+    $slika = $_FILES['slika']['name'];
+    move_uploaded_file($_FILES['slika']['tmp_name'], "../projekti/".$slika);
+    $sql = "UPDATE projekti SET naziv='$naziv', opis='$opis', slika='$slika' WHERE id=$id";
+  } else {
+    $sql = "UPDATE projekti SET naziv='$naziv', opis='$opis' WHERE id=$id";
+  }
+
+  if ($conn->query($sql)) {
+    echo "✅ Projekt ažuriran!";
+    header("refresh:1;url=dashboard.php");
+  } else {
+    echo "❌ Greška: " . $conn->error;
+  }
+}
+?>
+
+<h2>Uredi projekt</h2>
+<form method="post" enctype="multipart/form-data">
+  <input type="text" name="naziv" value="<?php echo $projekt['naziv']; ?>" required><br>
+  <textarea name="opis" required><?php echo $projekt['opis']; ?></textarea><br>
+  <img src="../projekti/<?php echo $projekt['slika']; ?>" width="150"><br>
+  <input type="file" name="slika"><br>
+  <button type="submit">Spremi promjene</button>
+</form>
+<?php
+session_start();
+if (!isset($_SESSION['admin'])) {
+  header("Location: login.php");
+  exit;
+}
+include '../config.php';
+
+$id = $_GET['id'];
+
+// Dohvati ime slike
+$sql = "SELECT slika FROM projekti WHERE id=$id";
+$result = $conn->query($sql);
+$row = $result->fetch_assoc();
+$slika = $row['slika'];
+
+// Obriši iz baze
+$conn->query("DELETE FROM projekti WHERE id=$id");
+
+// Obriši sliku iz foldera
+if (file_exists("../projekti/$slika")) {
+  unlink("../projekti/$slika");
+}
+
+header("Location: dashboard.php");
+exit;
+?>
+<?php
+session_start();
+session_destroy();
+header("Location: login.php");
+exit;
+?>
