--- a/index.html
+++ b/index.html
@@ -130,15 +130,26 @@
 </div>
 
 <script>
-  // 🔥 Firebase config – OVDJE ubaciš svoj config iz Firebase konzole
-  const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_PROJECT.firebaseapp.com",
-    projectId: "YOUR_PROJECT_ID",
-    storageBucket: "YOUR_PROJECT.appspot.com",
-    messagingSenderId: "YOUR_SENDER_ID",
-    appId: "YOUR_APP_ID"
-  };
+ // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBbub6_9vwV6pzZsaDYMAKqF-l_StgK-Og",
+  authDomain: "asseria-gradnja.firebaseapp.com",
+  projectId: "asseria-gradnja",
+  storageBucket: "asseria-gradnja.firebasestorage.app",
+  messagingSenderId: "1089188305925",
+  appId: "1:1089188305925:web:da44899fe877c2c821106c",
+  measurementId: "G-N9WW1TB59G"
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);  };
   firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
   const db = firebase.firestore();
