--- a/index.html
+++ b/index.html
@@ -182,3 +182,6 @@ window.onload=()=>{
 </script>
 </body>
 </html>
+
+<input type="file" id="galInput">
+<button onclick="addGallery()" class="btn">Dodaj</button>
