--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
 <section id="kontakt">
   <h2>Kontakt</h2>
-  <p>📞 <span id="contact-phone">+385 91 123 4567</span></p>
-  <p>✉️ <span id="contact-email">info@asseria-gradnja.hr</span></p>
+  <p>📞 <span id="contact-phone">+385 99 513 33773</span></p>
+  <p>✉️ <span id="contact-email">info@asseriagradnja@gmail.com</span></p>
   <p>📍 <span id="contact-address">Benkovačko selo 122, 23420 Benkovac</span></p>
 </section>
 
 <footer>
-  <p id="footer-text">© 2025 Asseria Gradnja</p>
+  <p id="footer-text">© 2022 Asseria Gradnja</p>
   <button onclick="showLogin()" class="btn">🔑 Admin</button>
 </footer>
 
