--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Asseria Gradnja</title>
+  <title>Asseria Gradnja j.d.o.o.</title>
   <style>
     body { font-family:sans-serif; margin:0; padding:0; background:#f4f4f4; color:#222 }
     header {
@@ -59,7 +59,7 @@
 
 <section id="onama">
   <h2 id="about-title">O nama</h2>
-  <p id="about-text">Specijalizirani smo za renoviranje kuća i stanova te niskogradnju sistemom ključ u ruke.</p>
+  <p id="about-text">Specijalizirani smo za renoviranje kuće ili stana. Nudimo izgradnu niskogradnje sistemom ključ u ruke.</p>
 </section>
 
 <section id="usluge">
